--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maf-string",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Some string functions in programming",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,7 @@
     "api-wilayah-indonesia": "^1.0.6",
     "maf-blockchain": "^1.0.1",
     "maf-converter": "^1.0.4",
-    "maf-icons": "^1.0.0"
+    "maf-icons": "^1.0.0",
+    "maf-table": "^1.0.0"
   }
 }
