--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "api-wilayah-indonesia": "^1.0.6",
     "maf-blockchain": "^1.0.1",
+    "maf-convert": "^1.0.0",
     "maf-converter": "^1.0.4",
     "maf-icons": "^1.0.0",
     "maf-table": "^1.0.0"
