--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maf-string",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Some string functions in programming",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "maf-convert": "^1.0.0",
     "maf-converter": "^1.0.4",
     "maf-icons": "^1.0.0",
-    "maf-table": "^1.0.0"
+    "maf-table": "^1.0.0",
+    "maf-zone": "^1.0.0"
   }
 }
